Add komatiite block

--- a/src/main/resources/assets/genesis/lang/en_us.json
+++ b/src/main/resources/assets/genesis/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-    "block.genesis.pegmatite": "Pegmatite"
+    "block.genesis.pegmatite": "Pegmatite",
+    "block.genesis.komatiite": "Komatiite"
 }
