Add granodiorite block and update forge and mappings versions

--- a/src/main/resources/assets/genesis/lang/en_us.json
+++ b/src/main/resources/assets/genesis/lang/en_us.json
@@ -1,4 +1,5 @@
 {
     "block.genesis.pegmatite": "Pegmatite",
-    "block.genesis.komatiite": "Komatiite"
+    "block.genesis.komatiite": "Komatiite",
+	"block.genesis.granodiorite": "Granodiorite"
 }
